--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:3.6.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -16,11 +16,18 @@ buildscript {
     }
 }
 
+ext {
+    chuck_version = '1.1.0'
+    retrofit_version = '2.3.0'
+    okhttp_version = '3.12.2'
+    dagger2_version = '2.15'
+}
+
 allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
