--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".ui.SplashScreenActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/FullScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,9 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.userlist.UserListActivity" />
-        <activity
-            android:name=".ui.searchuser.SearchUserActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.searchuser.SearchUserActivity" />
     </application>
 
 </manifest>
